<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia</string>
    <!-- description -->
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes">Like</string>
    <string name="description_count_likes">Number of likes</string>
    <string name="description_reposts">Reposts</string>
    <string name="description_count_repost">Number of reposts</string>
    <string name="description_count_views">Number of views</string>
    <string name="description_new_entries">Upload new entries</string>
    <string name="description_back">Back</string>
    <string name="description_image">Back</string>
    <string name="description_add_photo">Add photo</string>
    <string name="description_play_video">Play video</string>
    <string name="description_preview">Preview video</string>
    <string name="description_create">Icon create</string>
    <string name="description_close">Cancellation</string>
    <string name="description_add_post">Add post</string>

    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="save">Save</string>
    <string name="channel_name">Notification</string>
    <string name="notification_user_like">User %1$s liked %2$s\'s post</string>
    <string name="error_notification_title">Unknown notification</string>
    <string name="notification_user_new_posted">%1$s posted a new post</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="there_is_not_posts">There is not posts</string>
    <string name="attachment">Attachment</string>
    <string name="like_try_again">Something went wrong, try again</string>
    <string name="try_again">Try again</string>
    <string name="close">Close</string>
    <string name="new_entries">New entries</string>
    <string name="clear">Clear</string>
    <string name="image_picker_error">Image picker error</string>
    <string name="logout">Logout</string>
    <string name="singIn">Sing in</string>
    <string name="logIn">log in</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="or_register">Or register</string>
    <string name="enter">Enter</string>
    <string name="invalid_username_or_password">Invalid username or password, please try again</string>
    <string name="authorization_is_required_to_continue">Authorization is required to continue</string>
    <string name="the_action_cannot_be_performed">The action cannot be performed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password_replay">Password replay</string>
    <string name="or_enter">Or enter</string>
    <string name="register">Register</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="google_play_unavailable"> Google play unavailable</string>
    <string name="retry_button">Retry</string>


</resources>