<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/violet"
    app:cardCornerRadius="18dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/something_went_wrong"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/violet">
            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:text="@string/close"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textStyle="italic"/>
            <Button
                android:id="@+id/tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                android:text="@string/try_again"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textStyle="italic"
               />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>